--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "rakesh pudipeddi",
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.5.1"
   },
-  "devDependencies": {
-    "prompt": "^1.0.0"
-  }
 }
